[package]
name = "rune"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = "4.5.51"
futures-core = "0.3.31"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde_json = "1.0.145"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
tracing-subscriber = "0.3.20"
